fix: remove horizontal scroll from screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
   background-color: #907860;
   background-size: cover;
   font-family: "Fondamento", cursive, sans-serif;
+  overflow-x: hidden;
 }
 
 p {
@@ -542,37 +543,37 @@ ol li {
 #cauldron {
   width: 600px;
   top: -350px;
-  left: -600px;
+  left: -700px;
 }
 
 #candle-green {
-  width: 150px;
-  top: 220px;
+  width: 170px;
+  top: 190px;
   left: -200px;
 }
 
 #candle-orange {
-  width: 100px;
+  width: 150px;
   top: 360px;
-  right: -130px;
+  right: -180px;
 }
 
 #candle-purple {
   width: 120px;
   top: 380px;
-  left: -140px;
+  left: -340px;
 }
 
 #orb {
-  width: 450px;
-  top: -300px;
-  right: -400px;
+  width: 600px;
+  top: -400px;
+  right: -650px;
 }
 
 #wand {
-  width: 200px;
+  width: 220px;
   top: 80px;
-  right: -230px;
+  right: -320px;
 }
 
 /*---------------------------------------------Scrollbar*/
